--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ required-features = ["cli"]
 amplify = "3.13.0"
 strict_encoding_crate = { package = "strict_encoding", version = "2.0.0-alpha.1", features = ["bitcoin", "derive"], optional = true }
 bitcoin = "0.29.2"
-bitcoin_scripts = "0.9.0-alpha.1"
+bitcoin_scripts = {git = "https://github.com/galtland/bp-foundation", branch="compilation_fix"}
 bitcoin_blockchain = "0.9.0-alpha.1"
 bitcoin_hd = { version = "0.9.0-alpha.1", path = "./hd" }
 bitcoin_onchain = { version = "0.9.0-alpha.1", path = "./onchain" }
