--- a/descriptors/Cargo.toml
+++ b/descriptors/Cargo.toml
@@ -17,7 +17,7 @@ exclude = []
 amplify = "3.13.0"
 strict_encoding = "2.0.0-alpha.2"
 bitcoin = "0.29.2"
-bitcoin_scripts = "0.9.0-alpha.1"
+bitcoin_scripts = {git = "https://github.com/galtland/bp-foundation", branch="compilation_fix"}
 bitcoin_blockchain = "0.9.0-alpha.1"
 bitcoin_hd = { version = "0.9.0-alpha.1", path = "../hd" }
 miniscript_crate = { package = "miniscript", version = "9.0.0", features = ["compiler"], optional = true }
